--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <link rel="stylesheet" href="css/index.css">
 
-  <script defer src="js/index.js"></script>
+  <script type="module" src="js/index.js"></script>
 </head>
 
 <body>
@@ -51,7 +51,8 @@
             <button class="navigation__button navigation__button_hot-dog" data-category="hot-dog">Хот-доги</button>
           </li>
           <li class="navigation__item">
-            <button class="navigation__button navigation__button_combo" data-category="combo">Комбо</button>
+            <button 
+            class="navigation__button navigation__button_combo" data-category="combo">Комбо</button>
           </li>
           <li class="navigation__item">
             <button class="navigation__button navigation__button_shawarma" data-category="shawarma">Шаурма</button>
